<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/background_framelayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom">

            <Button
                android:id="@+id/lock_enable_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:text="@string/enable_lockscreen"/>

            <Button
                android:id="@+id/background_setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:text="@string/background_setting"/>

            <Button
                android:id="@+id/lock_setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:text="@string/lock_setting"/>

            <Button
                android:id="@+id/feedback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:text="@string/user_feedback"/>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
